Changed 24 hours support number to 4314

--- a/tours.html
+++ b/tours.html
@@ -28,7 +28,7 @@
                 <li><a href="tours.html" title="find tours">Tours by Region</a></li>
                 <li><a href="tours.html" title="find tours">Tour Finder</a></li>
               </ul>
-            </li>
+            </li>4
             <li><a href="mission.html" title="What we believe">Mission <br /><span class="tagline">what makes us different?</span></a></li>
             <li><a href="resources.html" title="planning resources">Resources <br /><span class="tagline">plan your trip</span></a>
               <ul>
@@ -164,7 +164,7 @@
           <h2>Explore California</h2>
           <p>5605 Nota Street<br />
             Ventura, CA 93003</p>
-          <p>866.555.4310<br />866.555.4315 <em>(24 hour support)</em></p>
+          <p>866.555.4310<br />866.555. <em>(24 hour support)</em></p>
         </div>
       </div>
     </div>
